<resources>
    <string name="app_name">HealthCare</string>
    <!-- Strings related to fragment -->
    <string name="title_homepage">主页</string>
    <string name="title_health">健康</string>
    <string name="title_driving">行驶记录</string>
    <string name="title_center">个人中心</string>
    <string name="heart_rate">心率</string>
    <string name="fatigue_rate">疲劳程度</string>

    <!-- Strings related to log in  -->
    <string name="hint_user_id">手机号</string>
    <string name="hint_password">密码</string>
    <string name="log_in">登录</string>
    <string name="sign_up">新用户注册</string>
    <string name="problem_log_in">无法登录？</string>

    <!-- Strings related to sign up -->
    <string name="sign_up_name">真实姓名</string>
    <string name="sign_up_phone_number">电话号码</string>
    <string name="sign_up_password">密码</string>
    <string name="sign_up_car_number">车牌号</string>
    <string name="sign_up_id_number">身份证号</string>
    <string name="sign_up_button">注册</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="log_out">退出登录</string>

    <!--String related to  heart_rate_frag-->
    <string name="unit_km_h">km/h</string>
    <string name="unit_km">km</string>
    <string name="unit_min">min</string>
    <string name="record_fra_speech">平均速度</string>
    <string name="record_fra_total_distance">行驶距离</string>
    <string name="record_fra_time">行驶时间</string>
    <string name="record_path">行驶路线</string>
    <string name="health_current_heart_rate">当前心率</string>
    <string name="heart_rate_frag_average">历史平均</string>

    <!--String related to fatigue_rate_frag-->
    <string name="fatigue_rate_frag_fatigue_rate">疲劳状态</string>
    <string name="fatigue_rate_frag_warn">温馨提示：\n驾驶时间过长，请注意休息。</string>

    <!-- String related to menu -->
    <string name="driving_habit">驾驶习惯</string>
    <string name="history_log">历史记录</string>
    <string name="settings">设置</string>
    <string name="image_male">男</string>
    <string name="image_female">女</string>
    <string name="backward">上一步</string>
    <string name="forward">下一步</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- String related to center -->

    <!-- String related to settings -->
    <string name="bt_info_management">信息管理</string>
    <string name="bt_notification">通知设置</string>
</resources>
