<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/dring_ball"
            android:id="@+id/driving_record_image"
            android:layout_width="220dp"
            android:layout_height="200dp"/>

        <TextView
            android:textColor="@color/orange"
            app:layout_constraintCircle="@id/driving_record_image"
            app:layout_constraintCircleAngle="195"
            app:layout_constraintCircleRadius="130dp"
            android:textSize="@dimen/record_data_text_size"
            android:text="12000"
            android:id="@+id/driving_record_fra_total_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/orange"
            app:layout_constraintRight_toLeftOf="@id/driving_record_fra_total_distance"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_total_distance"
            app:layout_constraintTop_toBottomOf="@id/driving_record_fra_total_distance"
            android:textSize="@dimen/record_name_text_size"
            android:layout_marginLeft="50dp"
            android:text="行驶总路程"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintBaseline_toBaselineOf="@id/driving_record_fra_total_distance"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_total_distance"
            android:textColor="@color/orange"
            android:layout_marginLeft="8dp"
            android:text="@string/unit_km"
            android:textSize="@dimen/record_unit_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginLeft="130dp"
            app:layout_constraintBaseline_toBaselineOf="@id/driving_record_fra_total_distance"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_total_distance"
            android:textColor="@color/orange"
            android:id="@+id/driving_record_fra_average_speech"
            android:textSize="@dimen/record_data_text_size"
            android:text="60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/orange"
            app:layout_constraintRight_toLeftOf="@id/driving_record_fra_average_speech"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_average_speech"
            app:layout_constraintTop_toBottomOf="@id/driving_record_fra_average_speech"
            android:textSize="@dimen/record_name_text_size"
            android:layout_marginLeft="50dp"
            android:text="@string/record_fra_speech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintBaseline_toBaselineOf="@id/driving_record_fra_average_speech"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_average_speech"
            android:textColor="@color/orange"
            android:layout_marginLeft="8dp"
            android:text="@string/unit_km_h"
            android:textSize="@dimen/record_unit_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintCircle="@id/driving_record_image"
            app:layout_constraintCircleAngle="90"
            app:layout_constraintCircleRadius="150dp"
            android:textSize="@dimen/record_data_text_size"
            android:textColor="@color/orange"
            android:text="180"
            android:id="@+id/driving_record_fra_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/driving_record_fra_time"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_time"
            app:layout_constraintRight_toLeftOf="@id/driving_record_fra_time"
            android:textColor="@color/orange"
            android:text="@string/record_fra_time"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintBaseline_toBaselineOf="@id/driving_record_fra_time"
            app:layout_constraintLeft_toRightOf="@id/driving_record_fra_time"
            android:textColor="@color/orange"
            android:layout_marginLeft="8dp"
            android:text="@string/unit_min"
            android:textSize="@dimen/record_unit_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/border_line"
        android:textColor="@color/gray"
        android:text="@string/record_path"
        android:textSize="@dimen/record_name_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.baidu.mapapi.map.MapView
        android:id="@+id/driving_map_view"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

</LinearLayout>